# my_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  autoapp.py  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: database.py  main.py  models.py
app/auth/: api.py  constants.py  exceptions.py  schemas.py  services.py
config/: settings.py
migrations/: env.py
migrations/versions/: 72502e4e284f_create_models.py
nginx/: nginx.conf
nginx/conf.d/sites-enabled/: common.conf  project.conf  upstreams.conf
